# Robo_UAV

./: README.md
config/cfg/: map_to_path_4m.txt
config/launch/: navigation.launch
config/rviz/: navigation.rviz
detect/: CMakeLists.txt  package.xml
detect/launch/: navigation.launch
detect/scripts/: detect.py  ttt.py
go/: CMakeLists.txt
go/include/: go.hpp
go/launch/: go.launch
go/src/: go.cpp
smooth_control/include/smooth_control/: smooth_control.h
smooth_control/src/: smooth_control.cc
unitree_nav_ros/: CMakeLists.txt  package.xml
unitree_nav_ros/include/unitree_nav_ros/: global_planner.h  libUnitreeNav.h  spline_planner.h
unitree_nav_ros/src/: UnitreeNav.cc  UnitreeNav_node.cc  global_planner.cpp  image v1.0  spline_planner.cpp
